feat: add navbar, slider and cards

--- a/index.html
+++ b/index.html
@@ -13,11 +13,121 @@
     <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     rel="stylesheet" />
-    <link rel="icon" href="assets/Globe_icon.svg" />
+    <link rel="icon" href="assets/bootstrap-logo.svg">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container">
+              <a class="navbar-brand" href="#">StoreLogo</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacts</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Services
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <main>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/img/HP_CORPO_ONE.jpg" class="d-block w-100" alt="img">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/ONE_hp_corpo_desk.jpg" class="d-block w-100" alt="img">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/flower.jpg" class="d-block w-100" alt="img">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <section>
+              <h2 class="service-title">Our services</h2>
+              <div class="container ">
+                  <div class="row cards">
+                      <div class="card col-sm-6">
+                          <h4>Service name</h4>
+                          <img src="assets/img/kiss.png" alt="img">
+                          <p>Lorem ipsum, dolor sit amet consectetur
+                             adipisicing elit. Iste, magni.</p>
+                      </div>
+                      <div class="card col-sm-6">
+                        <h4>Service name</h4>
+                        <img src="assets/img/kiss.png" alt="img">
+                        <p>Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit. Iste, magni.</p>
+                    </div>
+                    <div class="card col-sm-6">
+                        <h4>Service name</h4>
+                        <img src="assets/img/kiss.png" alt="img">
+                        <p>Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit. Iste, magni.</p>
+                    </div>
+                    <div class="card col-sm-6">
+                        <h4>Service name</h4>
+                        <img src="assets/img/kiss.png" alt="img">
+                        <p>Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit. Iste, magni.</p>
+                    </div>
+                    <div class="card col-sm-6">
+                        <h4>Service name</h4>
+                        <img src="assets/img/kiss.png" alt="img">
+                        <p>Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit. Iste, magni.</p>
+                    </div>
+                    <div class="card col-sm-6">
+                        <h4>Service name</h4>
+                        <img src="assets/img/kiss.png" alt="img">
+                        <p>Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit. Iste, magni.</p>
+                    </div>
+                  </div>
+              </div>
+          </section>
+    </main>
+    <footer></footer>
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
