--- a/index.html
+++ b/index.html
@@ -126,8 +126,137 @@
                   </div>
               </div>
           </section>
+          <!-- Button trigger modal -->
+          <div class="form">
+            <button type="button" class="btn btn-form" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Leave request
+            </button>
+            
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Contact form</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form action="#">
+                      <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" for="inputEmail">Email</label>
+                        <div class="col-sm-10">
+                          <input class="form-control mb-2" type="email" id="inputEmail">
+                        </div>
+                        <label class="col-sm-2 col-form-label" for="inputTel">Tel</label>
+                        <div class="col-sm-10">
+                          <input class="form-control mb-2" type="number" id="inputTel">
+                        </div>
+                        <label class="col-sm-2 col-form-label" for="inputName">Name</label>
+                        <div class="col-sm-10">
+                          <input class="form-control" type="text" id="inputName">
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-send ">Send</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- accordion-->
+          <div class="container">
+          <div class="accordion" id="accordionPanelsStayOpenExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                  Item #1
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordion-body">
+                  This is the first item's accordion body. It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                  Item #2
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                <div class="accordion-body">
+                  This is the second item's accordion body. It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                  Item #3
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                <div class="accordion-body">
+                  This is the third item's accordion body. It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the , though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+      <div class="container">
+      <div class="row">
+        <div class="col-12 col-md text-center">
+          <h5>StoreLogo</h5>
+          <ul class="list-unstyled text-small">
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md text-center">
+          <h5>StoreLogo</h5>
+          <ul class="list-unstyled text-small">
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md text-center">
+          <h5>StoreLogo</h5>
+          <ul class="list-unstyled text-small">
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md text-center">
+          <h5>StoreLogo</h5>
+          <ul class="list-unstyled text-small">
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+            <li><a href="#" class="link-secondary">Link</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    </footer>
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
