--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           </div>
         </div>
     </main>
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <footer class="pt-4 mt-md-5 pt-md-5 border-top">
       <div class="container">
       <div class="row">
         <div class="col-12 col-md text-center">
